src/main.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

ul, ol {
  list-style: none;
}

html, body {
  height: 100%;
  margin: 0;
}

body {
  background: #26d0ce;
  background: linear-gradient(90deg, #1a2980 10%, #26d0ce 90%);
  color: #fff;
  font-family: montserrat, sans-serif;
}

a {
  color: #fff;
  text-decoration: none;
}

header a:link,
header a:visited,
header a:active,
header a:hover {
  color: #def;
}

header a:hover,
header a.active {
  color: #fff;
}

header a.active {
  font-weight: 700;
}

header {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  padding: 15px;
}
header a {
  padding: 15px;
}
header h1 {
  margin-right: 15px;
}

.wordmark {
  text-transform: uppercase;
}

.content {
  padding: 15px;
}

button, input, select, textarea {
  font-size: 15px;
  font-family: inherit;
}

button, input, textarea {
  padding: 5px;
}

.field {
  display: block;
}

.field--large {
  width: 30em;
}

button {
  background: lightgreen;
  border: 0;
  padding: 10px 20px;
}

p {
  margin: 1.5em 0;
}

h2 {
  display: none;
  margin-bottom: .5em;
}

.app-list-outer {
  bottom: 20px;
  left: 20px;
  position: absolute;
  right: 20px;
}

.scrollable--h {
  height: 290px;
  overflow: hidden;
}

.scrollable--h > * {
  -moz-overflow-scrolling: touch;
  -webkit-overflow-scrolling: touch;
  overflow-scrolling: touch;
  user-select: none;
  padding-bottom: 60px;
  overflow-x: scroll;
  overflow-y: hidden;
}

.app-list {
  margin: -1rem 0 0 -1rem;
  white-space: nowrap;
}

.app-tile {
  display: inline-block;
  font-size: 0;
  min-width: 250px;
  padding: 1rem 0 0 1rem;
  white-space: normal;
}

.app-tile__icon {
  margin: 0 auto;
  max-height: 100%;
  max-width: 240px;
  flex-grow: 1;
}

.app-tile__link {
  background-color: #fff;
  display: flex;
  flex-direction: column;
  transition: .1s box-shadow ease-in-out;
}

.app-tile__link:hover {
  box-shadow: 0 0 0 .2rem #fff;
}

.app-tile__name {
  background: rgba(255,255,255,.5);
  color: #333;
  font-size: 16px;
  font-weight: 700;
  padding: 15px;
  text-transform: uppercase;
}

.app-tile__details {
  display: none;
}

.app-tile__link:hover .app-tile__details {
  display: block;
}

.app-tile__details {
  font-family: 'Fira Sans', sans-serif;
  height: 100%;
  left: 0;
  pointer-events: none;
  position: fixed;
  right: 0;
  top: 0;
  z-index: -1;
}

.app-tile__instructions {
  background-position: 0 50%;
  background-repeat: no-repeat;
  background-size: cover;
  height: calc(100% - 330px);
  padding: 90px 15px 15px;
}

.app-tile__instructions .wrap {
  width: 480px;
}

.app-tile__heading {
  color: #fff;
  font-weight: 200;
  font-size: 48px;
  line-height: 1.2;
}

.app-tile__tagline {
  color: #aaa;
  font-size: 16px;
  font-weight: 300;
  margin-bottom: 15px;
  text-transform: uppercase;
}

.app-tile__description {
  font-size: 24px;
  font-weight: 300;
}

.app-tile__browser {
  border: 0;
  display: block;
  height: 100%;
  left: 0;
  position: fixed;
  top: 0;
  width: 100%;
}

